<resources>
    <string name="app_name">JqueryService Dev</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="try_again">重试</string>
    <string name="token_error">卡未上表</string>
    <string name="settings">设置</string>
    <string name="help_permissions">警告</string>
    <string name="string_help_text">缺少权限!\n\n请点击\"设置\"->\"权限管理\"</string>
    <string name="quit">退出</string>
    <string name="pay_ic_card">首页</string>
    <string name="card_tips">未插入IC卡，请插卡</string>
    <string name="pay_QR_code">二维码支付</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_QR_code_money">扫二维码向我付钱</string>
    <string name="pay_dollar">元</string>
    <string name="wx_pay">微信支付</string>
    <string name="cash_pay">现金支付</string>
    <string name="payment_method">付款方式</string>
    <string name="payment">支付方式</string>
    <string name="pay_dollar_symbol">￥</string>
    <string name="pay_online">在线支付</string>
    <string name="read_ic_card">读取IC卡</string>
    <string name="write_ic_card">写卡储值</string>
    <string name="read_ic_card_hint_one">从底部把IC卡插入到IC卡</string>
    <string name="read_ic_card_hint_two"> 感应区 </string>
    <string name="read_ic_card_hint_three">并</string>
    <string name="read_ic_card_hint_four">紧贴感应区</string>
    <string name="read_ic_card_hint_five">直至读卡成功</string>
    <string name="read_ic_card_tip_one">1.插卡时请注意插卡方向</string>
    <string name="read_ic_card_tip_two">2.若无法识别，建议插卡再试</string>
    <string name="tip">小贴士</string>
    <string name="recharge_money">充值金额</string>
    <string name="reading_ic_card">正在读卡</string>
    <string name="click_read_ic_card">点击读取IC卡</string>
    <string name="back">返回</string>
    <string name="finish">完成</string>
    <string name="hint">提示</string>
    <string name="not_paid">您还未支付哦，确定离开？</string>
    <string name="payment_success">支付成功，去写卡中...</string>
    <string name="F512">FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</string>
    <string name="plug_in_card_erro">请按正确方向插入IC卡</string>
    <string name="account_information">账户信息</string>
    <string name="data_parsing_failed">数据解析失败</string>
    <string name="no_card">未插卡，请插卡</string>
    <string name="getting_the_payment_qr_code">正在获取支付二维码</string>
    <string name="getting_cash_payment">正在现金支付</string>
    <string name="to_write_card">去写卡......</string>
    <string name="loading">正在加载中...</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="non_payment">未支付</string>
    <string name="getting_the_payment_qr_code_status">查询支付状态...</string>
    <string name="write_ic_card_fail">写卡失败</string>
    <string name="write_ic_card_success">写卡成功</string>
    <string name="open_card_fail">开卡失败</string>
    <string name="write_ic_card_exception">写卡异常</string>
    <string name="numbered_mode_ic_card">暂不支持该卡类型</string>
    <string name="write_ic_card_no_data">起始地址和写入的数据不能为空</string>
    <string name="equipment_connected">设备已经连接</string>
    <string name="equipment_connecte_exception">设备连接异常</string>
    <string name="write_ic_card_have_data">该卡还有多余燃气，不能在充值了哦~~</string>
    <string name="read_ic_card_fail">读卡失败</string>
    <string name="salutation">您好，您还有</string>
    <string name="continued_table">m³没有上表，请上表后再充值哦~~</string>
    <string name="honorific">尊敬的</string>
    <string name="change_password_fail">修改密码失败</string>
    <string name="calculate_recharge_amount">正在计算充值金额</string>
    <string name="user_number">用户编号</string>
    <string name="user_name">用户姓名</string>
    <string name="pay_time">充值时间</string>
    <string name="pay_count">充值条数</string>
    <string name="total_purchase_volume">总购气量</string>
    <string name="write_stored_value_card_success">写卡储值成功</string>
    <string name="cash_refund_successful">现金退费成功！</string>
    <string name="weChat_applied_refund_pending_review">已申请微信退费，待审核！</string>
    <string name="prepare_print_gas_purchase_vouchers">准备打印购气凭据!</string>
    <string name="printer_initialization_exception">打印机初始化异常！</string>
    <string name="printer_concentration_setting_exception">打印机浓度设置异常！</string>
    <string name="printer_font_settings_exception">打印机字体设置异常！</string>
    <string name="weChat_pay">微信支付</string>
    <string name="cash_payment">现金支付</string>
    <string name="print_failed_status_exception">打印失败！打印机状态不正常!</string>
    <string name="device_connected">设备已经连接!</string>
    <string name="device_connected_exception">设备连接异常！</string>
    <string name="click_again_exit_APP">再按一次退出APP!</string>
    <string name="pending_review">微信退款申请待审核，暂时不能购气哦~~</string>
    <string name="come_to">（共计）</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="click_scan_qrcode">扫描二维码/条形码</string>
    <string name="login">登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="wx_login">微信登录</string>
    <string name="phone_register">手机快速注册</string>
    <string name="phone_change">修改密码</string>
    <string name="phone_bind">绑定手机</string>
    <string name="retrieve_password">忘记密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="password_tips">请输入至少6至20位密码</string>
    <string name="phone_tips">手机号码不能为空</string>
    <string name="china">中国</string>
    <string name="uninstall_wx">"请先安装微信"</string>
    <string name="login_cancel">登录已取消</string>
    <string name="login_refuse">登录已被拒绝</string>
    <string name="address">常用地址管理</string>
    <string name="setting">设置</string>
    <string name="about_us">关于</string>
    <string name="remind">开播提醒</string>
    <string name="clear_cache">清理缓存</string>
    <string name="logout">退出登录</string>
    <string name="unlogin_tips">注册/登录</string>
    <string name="shop_cart_empty_tips">暂无任务哦</string>
    <string name="wait_dispose">待处理</string>
    <string name="wait_processing">处理中</string>
    <string name="wait_redeploying">转派中</string>
    <string name="wait_resolved">已处理</string>
    <string name="basic_function">基本功能</string>
    <string name="system_setup">系统设置</string>
    <string name="meter_operational">设备运维</string>
    <string name="sign_record">签到记录</string>
    <string name="address_book">通讯录</string>
    <string name="liastre">我的近况</string>
    <string name="about">关于</string>
    <string name="infrared_upgrade">红外升级</string>
    <string name="infrared_upgrade_file_error">升级文件异常，请重新校验升级包</string>
    <string name="tab_home">首页</string>
    <string name="tab_category">分类</string>
    <string name="tab_focus">关注</string>
    <string name="tab_mine">我的</string>
    <string name="reported">故障</string>
    <string name="charts">贝塞尔曲线</string>
    <string name="charts_one">charts_one</string>
    <string name="work_order">近期</string>
    <string name="punch_card">打卡</string>
    <string name="submit">提交</string>
    <string name="device_number">设备号</string>
    <string name="device_address">设备地址</string>
    <string name="other">其它上报方式</string>
    <string name="fault">故障</string>
    <string name="mine">我的</string>
    <string name="recent">近期</string>
    <string name="font_gothic_bold">gothic_bold.ttf</string>
    <string name="font_gothic">gothic.ttf</string>
    <string name="app_login_wellcome">欢迎使用JqueryService Dev</string>
    <string name="tv_synergy_account_hint">使用已注册账号进行登录</string>
    <string name="bind_explain">关于设备绑定？</string>
    <string name="hint_account">请输入账号</string>
    <string name="loading_description">加载中</string>
    <string name="edit">编辑</string>
    <string name="infrared">红外线</string>
    <string name="edit_profile">个人资料修改</string>
    <string name="gender">性别</string>
    <string name="username">姓名</string>
    <string name="region">所属大区</string>
    <string name="bind_weChat">绑定微信号</string>
    <string name="group">所属分组</string>
    <string name="mobile">手机号</string>
    <string name="exit">退出</string>
    <string name="avatar">头像</string>
    <string name="handled_fault">已完结</string>
    <string name="handled_fault_colon">已完结:</string>
    <string name="untreated_fault">未完结</string>
    <string name="untreated_fault_colon">未完结:</string>
    <string name="scanlife">二维码扫描</string>
    <string name="forget_password">忘记密码</string>
    <string name="i_see">知道了</string>
    <string name="personnel_situation">人员情况</string>
    <string name="fault_condition">故障情况</string>
    <string name="sign_case">签到情况</string>
    <string name="management_function">管理功能</string>
    <string name="test_version">检测新版本</string>
    <string name="FAQ">常见问题</string>
    <string name="version_code">Version</string>
    <string name="empty_handled_fault">暂无未完结故障</string>
    <string name="empty_home_tips">暂无内容</string>
    <string name="tab_fault">故障</string>
    <string name="not_enabled_location">未授权！请开启定位授权</string>
    <string name="relocation">重新定位</string>
    <string name="ir_function">智能表维护</string>
    <string name="ip_change">  IP&#160;&#160;&#160;&#160;&#160;更改</string>
    <string name="billing_scheme">  计费方案</string>
    <string name="switch_value">阀门开关</string>
    <string name="firmware_update">固件升级</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="sign_state">签到状态</string>
    <string name="more">更多</string>
    <string name="unit_cubic_meter">&#160;m³</string>
    <string name="unit_yuan">&#160;元</string>
    <string name="unit_dBm">&#160;dBm</string>
    <string name="unit_dB">&#160;dB</string>
    <string name="unit_v">&#160;V</string>
    <string name="time_year">年</string>
    <string name="time_moth">月</string>
    <string name="time_day">日&#160;</string>
    <string name="bracket_left">（</string>
    <string name="bracket_right">）</string>
    <string name="response_code">返回码&#160;</string>
    <string name="fault_statistics_way">统计方式</string>
    <string name="fault_sum_added">提交故障:</string>
    <string name="new_fault">新故障处理 +</string>
    <string name="corrective_maintenance">故障维修</string>
    <string name="corrective_maintenance_detils">故障维修详情</string>
    <string name="search_hint">使用地址、故障原因、详情进行检索</string>
    <string name="confirm_retrieve">确认并检索</string>
    <string name="launch_date">发起日期</string>
    <string name="date_closed">结束日期</string>
    <string name="select_interval">选择区间</string>
    <string name="password_change">密码更改</string>
    <string name="sign">签到</string>
    <string name="fault_type">故障类型</string>
    <string name="admin_add_fault">发起工程</string>
    <string name="admin_added_fault_deal">完成</string>
    <string name="admin_added_fault_remain">未完成</string>
    <string name="unit_piece_comma">件，</string>
    <string name="unit_piece">件</string>
    <string name="liastre_total_submitted_hint">共提交故障：</string>
    <string name="liastre_total_submitted_piece">件</string>
    <string name="liastre_total_piece">件，</string>
    <string name="liastre_total_sign_hint">总签到次数：</string>
    <string name="liastre_total_sign_line">/</string>
    <string name="all">全部</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="please_enter_password">请输入密码</string>
</resources>