<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ff"
    android:orientation="vertical">

    <include layout="@layout/include_title_bar"></include>

    <com.jquery.service.android.widgets.TopTitleBar
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/fault_condition" />

    <RelativeLayout
        android:id="@+id/rl_date_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/calendar_previous"
            style="@style/CommonText_c33_dp14"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:text="@string/time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_time"
                style="@style/Text_c_ff42_dp13_bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/dp_5"
                android:text="222" />

            <TextView
                style="@style/Text_c_ff42_dp13_bold"
                android:layout_width="wrap_content"
                android:padding="@dimen/dp_5"
                android:text=" ~ " />

            <TextView
                android:id="@+id/tv_end_time"
                style="@style/Text_c_ff42_dp13_bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/dp_5"
                android:text="222" />
        </LinearLayout>


        <ImageView
            android:id="@+id/calendar_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_calendar" />
    </RelativeLayout>

    <com.jquery.service.android.widgets.AutoNextLineLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_6"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_fault_statistics_num"
            style="@style/CommonText_c33_dp14"
            android:text="@string/fault_sum_added" />


        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="1000" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/unit_piece_comma" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/handled_fault_colon" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="1000" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/unit_piece_comma" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/untreated_fault_colon" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="1000"
            android:textColor="@color/c_ff42" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/unit_piece"

            />
    </com.jquery.service.android.widgets.AutoNextLineLinearLayout>

    <LinearLayout
        android:id="@+id/ll_fault_statistics_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_16">

        <TextView
            style="@style/CommonText_c33_dp14"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fault_statistics_way"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold" />

        <TextView
            style="@style/CommonText_c33_dp14"
            android:text="@string/fault_type" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:src="@drawable/ic_down_arrow" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_fault_condition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
</LinearLayout>