<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_title_bar"></include>

    <com.jquery.service.android.widgets.TopTitleBar
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/liastre" />

    <LinearLayout
        android:id="@+id/ll_date_change"
        style="@style/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/c_55"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="4.10~4-23"
            android:textColor="@color/c_ff42"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:id="@+id/tv_date_hint"
            style="@style/user_text" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_7"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liastre_total_submitted_hint"
            android:textColor="@color/c_55"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/tv_total_submitted_total_piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1200"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/liastre_total_piece"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/handled_fault"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/tv_handled_total_piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="980"
            android:textColor="@color/c_99"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/liastre_total_piece"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/tv_total_untreated_piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="220"
            android:textColor="@color/c_ff42"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/liastre_total_submitted_piece"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/untreated_fault"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />
    </LinearLayout>

    <LinearLayout
        style="@style/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_7"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liastre_total_sign_hint"
            android:textColor="@color/c_55"
            android:textSize="@dimen/dp_13" />


        <TextView
            android:id="@+id/tv_sign_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="280"
            android:textColor="@color/c_ff42"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@+id/tv_sign_total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/liastre_total_sign_line"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="282"
            android:textColor="@color/c_33"
            android:textSize="@dimen/dp_13" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/all"
            android:textColor="@drawable/color_crew_radiobutton"
            android:textSize="@dimen/dp_13" />

        <RadioButton
            android:id="@+id/rb_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/sign"
            android:textColor="@drawable/color_crew_radiobutton"
            android:textSize="@dimen/dp_13" />

        <RadioButton
            android:id="@+id/rb_fault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/fault"
            android:textColor="@drawable/color_crew_radiobutton"
            android:textSize="@dimen/dp_13" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_13"
            android:textSize="@dimen/dp_13" />
    </RadioGroup>

    <android.support.v4.view.ViewPager

        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/c_ff"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_recent_work"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</LinearLayout>